--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <!-- 基本信息 -->
             <section class="profile info-unit">
                 <h2>
-                    <i class="fa fa-user" aria-hidden="true"></i>Infomation</h2>
+                    <i class="fa fa-user" aria-hidden="true"></i>Profile</h2>
                 <hr/>
                 <ul>
                     <li>
@@ -93,6 +93,25 @@
                     <li>
                         <label>Language</label>
                         <span>TOEFL 92 R24,L24,S23,W21</span>
+                    </li>
+                    <li>
+                        <label>Resume</label>
+                        <a href="assets/Yanshu-Zhang's CV.pdf" target="_blank">YanShu Zhang's CV</a>
+                    </li>
+                </ul>
+            </section>
+
+            <!-- 研究兴趣 -->
+            <section class="interest info-unit">
+                <h2>
+                    <i class="fa fa-camera-retro" aria-hidden="true"></i>Research Interest</h2>
+                <hr/>
+                <ul>
+                    <li>
+                        <span>Computer Vision</span>
+                    </li>
+                    <li>
+                        <span>Machine Learning</span>
                     </li>
                 </ul>
             </section>
@@ -243,7 +262,7 @@
                     <li>
                         <h3>
                             <span>Minister of Student Union of School of Life Science</span>
-                            <time>2017.9 至 2019.6</time>
+                            <time>2017.9-2019.6</time>
                         </h3>
                         <ul class="info-content">
                             <li>Participated in the affairs of Secretary Department</li>
