--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script>
         function loading() {
             document.getElementsByClassName('avatar')[0].style.display = 'block';
-            // document.getElementsByClassName('loading')[0].style.display = 'none';
+            document.getElementsByClassName('loading')[0].style.display = 'none';
         }
     </script>
 </head>
@@ -199,7 +199,8 @@
                             <time>2018.9-Present</time>
                         </h3>
                         <p>GPA:
-                            <mark>3.61/4.3(86.34/100)</mark>Computer Networks(95), Stochastic Processes(96), Introduction to Algorithms(89), Algebraic Structure(88), Graph Theory, Operation System(90), Computer Organization(88), Probability and Statistics(96), Mathematical Logic(88), Program Design(90)</p>
+                            <mark>3.62/4.3(86.54/100)</mark></p>
+                        <p>Networks(95), Stochastic Processes(96), Introduction to Algorithms(89), Algebraic Structure(88), Graph Theory, Operation System(90), Computer Organization(88), Probability and Statistics(96), Mathematical Logic(88), Program Design(90)</p>
                     </li>
                     <li>
                         <h3>
@@ -227,10 +228,25 @@
                             <time>2019.10-Present</time>
                         </h3>
                         <ul class="info-content">
-                            <li>Found out some deficiencies in current methods</li>
-                            <li>Proposed some improvement ideas for existing one-stage methods</li>
+                            <li>Found out some deficiencies in current one-stage instance segmentation methods</li>
+                            <li>Proposed some improvement ideas for existing one-stage methods like adaptive modeling</li>
                             <li>Learned to read the source code and how to train and test the model on the server</li>
                             <li>Learned basic machine learning methods and read related papers like object detection</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h3>
+                            <span>Prediction of Quality Consistency of Typical Workpieces</span>
+                            <span class="link">
+                                <a href="https://github.com/zVict/CCF2019" target="_blank">Code</a>
+                            </span>
+                            <time>2019.7-2019.8</time>
+                        </h3>
+                        <ul class="info-content">
+                            <li>Invented a two-stage classification method, which regress to predict attributes first</li>
+                            <li>Used various methods for data preprocessing, such as PCA and feature construction</li>
+                            <li>Applied multiple boosting models for regression and classification, and model stacking for ensemble learning</li>
+                            <li>Implemented all the above ideas and the whole pipeline in Python</li>
                         </ul>
                     </li>
                     <li>
@@ -249,7 +265,6 @@
                             <li>Evaluate performance of different clustering algorithms</li>
                         </ul>
                     </li>
-
                 </ul>
             </section>
             
@@ -281,13 +296,13 @@
                 <ul>
                     <li>
                         <h3>
-                            <span>Silver Award for Outstanding Students of USTC</span>
+                            <span>Silver Award for Outstanding Students of USTC (top 20%)</span>
                             <time>2019.9</time>
                         </h3>
                     </li>
                     <li>
                         <h3>
-                            <span>Bronze Award for Outstanding Students of USTC</span>
+                            <span>Bronze Award for Outstanding Students of USTC (top 40%)</span>
                             <time>2018.9</time>
                         </h3>
                     </li>
