--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
                             <time>2018.9-Present</time>
                         </h3>
                         <p>GPA:
-                            <mark>3.62/4.3(86.54/100)</mark></p>
-                        <p>Networks(95), Stochastic Processes(96), Introduction to Algorithms(89), Algebraic Structure(88), Graph Theory, Operation System(90), Computer Organization(88), Probability and Statistics(96), Mathematical Logic(88), Program Design(90)</p>
+                            <mark>3.64/4.3(86.86/100)</mark></p>
+                        <p>Computer Networks(95), Stochastic Processes(96), Introduction to Algorithms(89), Algebraic Structure(88), Operation System(90), Computer Organization(88), Probability and Statistics(96), Mathematical Logic(88), Program Design(90) , Introduction to Data Science(95)</p>
                     </li>
                     <li>
                         <h3>
@@ -228,7 +228,7 @@
                             <time>2019.10-Present</time>
                         </h3>
                         <ul class="info-content">
-                            <li>Found out some deficiencies in current one-stage instance segmentation methods</li>
+                            <li>Found out some deficiencies in current methods such as inappropriate IoU loss</li>
                             <li>Proposed some improvement ideas for existing one-stage methods like adaptive modeling</li>
                             <li>Learned to read the source code and how to train and test the model on the server</li>
                             <li>Learned basic machine learning methods and read related papers like object detection</li>
@@ -258,11 +258,11 @@
                             <time>2019.7-2019.8</time>
                         </h3>
                         <ul class="info-content">
-                            <li>Proposed the research direction of the group of four</li>
+                            <li>Proposed the research direction, digging relationships between similar posters, of the group of four</li>
                             <li>Responsible for half of the technical work e.g. Collect and preprocess data set</li>
                             <li>Calculate dissimilarity matrix of posters using pre-trained ResNet50</li>
                             <li>Build graph and detect communities</li>
-                            <li>Evaluate performance of different clustering algorithms</li>
+                            <li>Evaluate performance of different clustering algorithms such as Girvan-Newman and k-clique</li>
                         </ul>
                     </li>
                 </ul>
@@ -315,7 +315,7 @@
 
     <footer class="footer">
         <p>© 2017 zvict. Last Modified
-            <time>2020/01/28</time>.</p>
+            <time>2020/02/04</time>.</p>
     </footer>
 
     <!-- 侧栏 -->
